
	- Fixed mdy functions to use correct offset.
	
Fri Jul 25 18:08:18 CEST 2003

	- Added explicit casts for date/timestamp/interval.
	
Fri Aug  1 08:54:02 CEST 2003
	
	- Added some Informix error codes in Informix mode.
	- Added just another pgtypeslib function.

Mon Aug 25 13:24:27 CEST 2003

	- Synced parser.
	
Tue Aug 26 18:06:45 CEST 2003

	- Fixed processing of connect statement with username as variable.
	
Mon Sep  1 14:33:10 CEST 2003

	- Fixed two bugs in numeric library.

Tue Sep  9 12:13:51 CEST 2003

	- Added Dave patch for Informix handling of numeric/int conversion.
	- Changed all new datatypes to lowercase.
	- Fixed rounding bug in numerical types.
	
Wed Sep 10 20:01:49 CEST 2003

	- Some files still had uppercase typenames
	
Mon Sep 15 18:09:42 CEST 2003

	- Accept output variables for FETCH in DECLARE statement.
	
Tue Sep 16 07:56:14 CEST 2003

	- Synced parser.
	- Allowed C variables to carry the name of prepared statements.
	
Thu Sep 18 14:54:47 CEST 2003

	- Added Informix handling of datatype converion errors.
	
Fri Sep 19 08:33:39 CEST 2003

	- Some code cleanup
	
Sat Sep 20 11:06:13 CEST 2003

	- Applied some bug fixing patches by Dave Cramer <dave@fastcrypt.com>.
	- Added protecting defines to include files.
	- Renamed my own strndup() function because of a name clash.
	
Mon Sep 22 15:13:02 CEST 2003

	- Fixed order mismatch in processing "using" arguments.
	- Fixed some minor things in test cases.
	- Use defines for Informix error codes.

Tue Sep 23 14:50:45 CEST 2003

	- Changed struct definition handling so "struct foo {}" always gets
	  defined.
	  
Fri Sep 26 17:14:07 CEST 2003

	- Incorrect datatype with precision argument should not create a
	  segfault.
	  
Fri Oct  3 12:04:57 CEST 2003

	- Hide Informix datatypes in PostgreSQL built process.
	
Sun Oct  5 13:08:47 CEST 2003

	- Fixed bug in day of week calculation.
	- Set ecpg version to 3.0.0
	- Set ecpg library to 4.0.0
	- Set pgtypes library to 1.0.0
	- Set compat library to 1.0.0
